# ChangeLog for www-client/surfraw
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/surfraw/ChangeLog,v 1.77 2014/03/12 10:09:22 ago Exp $

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> surfraw-2.2.9.ebuild:
  Stable for sparc, wrt bug #502942

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> surfraw-2.2.9.ebuild:
  Stable for ppc, wrt bug #502942

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> surfraw-2.2.9.ebuild:
  Stable for x86, wrt bug #502942

  03 Mar 2014; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.9.ebuild:
  Stable for HPPA (bug #502942).

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> surfraw-2.2.9.ebuild:
  amd64 stable, bug #502942

*surfraw-2.2.9 (16 Dec 2013)

  16 Dec 2013; Jeroen Roovers <jer@gentoo.org> +surfraw-2.2.9.ebuild:
  Version bump.

  05 Mar 2013; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Add proxy-maintainers herd.

  26 Jan 2012; Jeroen Roovers <jer@gentoo.org> -surfraw-2.2.7.ebuild:
  Old.

  09 Jan 2012; Brent Baude <ranger@gentoo.org> surfraw-2.2.8.ebuild:
  Marking surfraw-2.2.8 ppc for bug 389333

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> surfraw-2.2.8.ebuild:
  sparc stable wrt #389333

  26 Nov 2011; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.8.ebuild:
  Require dev-lang/perl at runtime.

  11 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> surfraw-2.2.8.ebuild:
  x86 stable wrt bug #389333

  09 Nov 2011; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.8.ebuild:
  Stable for HPPA (bug #389333).

  03 Nov 2011; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.8.ebuild:
  Use bash-completion-r1.eclass, remove the symlink fixing hack and use DOCS
  instead of dodoc by James Rowe (bug #389377).

  03 Nov 2011; Tony Vroon <chainsaw@gentoo.org> surfraw-2.2.8.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #389333.

  12 Jul 2011; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.8.ebuild: