@@ -1,12 +1,0 @@
-DEFINED_PHASES=configure install postinst preinst prepare
-DESCRIPTION=A fast unix command line interface to WWW
-EAPI=4
-HOMEPAGE=http://surfraw.alioth.debian.org/
-KEYWORDS=amd64 hppa ppc sparc x86 ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris
-LICENSE=public-domain
-RDEPEND=dev-lang/perl
-RESTRICT=test
-SLOT=0
-SRC_URI=http://surfraw.alioth.debian.org/dist/surfraw-2.2.8.tar.gz
-_eclasses_=bash-completion-r1	db412e427e3317ffd3e15f17df269c5e	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=d476fb4707d17f6a88c601ad0299f390
