@@ -2,26 +2,14 @@
 Hash: SHA256
 
 AUX surfraw-2.2.6-gentoo_pkg_tools.patch 1155 SHA256 e69f2b9f61eb6078a67e38cfb7351c2e86f6bdd521afaf06c50a520389491e0e SHA512 98733be556508761d27543f5af751333d5aced7371cc6510607e4b7d88e546dcbc8420ae5620b9a8d195f2601cb053352f3bee9b9c513bc51ea5bc0c6c3a1cab WHIRLPOOL 3630a9f13dda1cb4a9e3401683b104f227ed564c9f4a24edee1df1adb5788bf048e7ac98572190b78f0802dbd9d9600c5dbc39079ae0dc09b9a892d0abf58f7e
-DIST surfraw-2.2.8.tar.gz 183019 SHA256 925075e05637e39458b00e859193aacde306aafd9a962f44f5114f81713539ec SHA512 a87604908e1a8372d9255e1f49886da41520b2d41e4ec3bd2fd27ec9abc5c46da6d383631a0e1e815b0c066172f8e4029ae03390549a6fe57e7b7c09db41ad95 WHIRLPOOL 9306613a7b8872aea8509d36b60305c6ae0776cd87951ff5476dae8c777a6d78b506ee04373dacc8d74549be66b44015a5a4f02b7b33b927166664a215e07ffe
 DIST surfraw-2.2.9.tar.gz 200042 SHA256 aa97d9ac24ca4299be39fcde562b98ed556b3bf5ee9a1ae497e0ce040bbcc4bb SHA512 81ddfc5300f5f052e09187144f39c0e1f0d6a0df9ad82d4457b60498278061ac6736a8236bd2b3516f6ad885d22c8616372b354f11b2dbb46ef4f3790456f016 WHIRLPOOL 80b149ddb7f37a0c000bba6dcbd1d4eff124581ba3266fb0cdf87467759856fc933067d45a4af30687564fa29f2b9756c6b393378420b0661e5d7c90cc8d30d6
-EBUILD surfraw-2.2.8.ebuild 2590 SHA256 2185c3fbb4363b068a0336b563d548b85017c3b821579717d86bef0d082b5b90 SHA512 ab051489c533d3275cea4c234a46c739474e33d51def1480801229a70ebd06311f3b8d9a12b7bc9d9f43ce706dacebf4666208caa4a272a4cee8ec8a33d7bda9 WHIRLPOOL 5c47df52a0989802b33daeb971a86c135d708addbbfa1d4f22c0ae6d3063013a12c437c1819613cc54c0cfd8416c32cd1a6753d3b51b6bba1372df85c0be0dd4
 EBUILD surfraw-2.2.9.ebuild 2587 SHA256 3644d7d7ec81063fbf8fd905223ac493d9277c5bf92c140917b2b2af052f3ef2 SHA512 96280c7aeb3475ec5dbc16e8be3107f1cae948fe0108ceac79983cbf7eb1d65e9fbbc76049fa036d739ab01158b163ec4f7945e9a435da3d575b53885a3155df WHIRLPOOL 16c7d39c1394c1896a6b97d1b66cb5801bc0c5aa5607fa061ce0806ecf852c1a40f41c7d6330810f28f56ce05ec52507b49324b1b9380ae6b3d560d48a02532a
-MISC ChangeLog 10028 SHA256 cb7fec51664286946bc9450579dc85fdeb2487f4d0f721415777a1cf3ff37a44 SHA512 d2bf57391bc6bb5c2a5e04d097e3c09f454f168d1abf2cc8c1e7e4280de35aedcfcce27086990b170be7ee7af30957828c9b2fc35c5700a2a6c21f8604e7ce14 WHIRLPOOL 1b4ccd0d23da439964c9f01085c1003ff0fcabb100d72841dbd86f500865bccb1e9611297ea9959d9d89771e0be88caf6fc2565963f5b99742a0ab4b2f8f229e
+MISC ChangeLog 10106 SHA256 a44628b8bc009154686fdaa583de00dbbd2f0a079d974bfa26ab533b67b833b5 SHA512 6f5d531a5047e7ca810bf246728afe9117928aa0aded613bbfcbd689bc8ef23e33d28e9e8bc677de52cff0e14575a956f5363f523928b14e1012dc3bc6cf4804 WHIRLPOOL b0c118d5620cf37af7f1ab84302b777fc760495fd5df0b8128b73aa17ec40d7f28c28dbb1f27a728d8dc226a389303bf52524dfaf04c522f3b89e8b352afc1d1
 MISC metadata.xml 1326 SHA256 cc11a4bc83bdc67a999eded2785e310d0e2a023eb59d1c1f978c7c54d4b0e8f3 SHA512 8c69a3b8c010ab63b26ed2e324f78521fcc4138e9aec728b945492d8febc8de21f2952b73724b8f358ff3a9df47345e1ecbc13e2e97203c613209e18b6f8677e WHIRLPOOL 07f513483d1e245a31ede40142dc956a562d4a4b9bd6015e98879f5bdc6e5bfbf25d676849eb5bc07b37d0989d903693d6016b4aeb64b5f9b288679fda3426ed
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTIDJTAAoJELp701BxlEWfwHIP/j4WM5Er71nOrEagQAm4unf+
-36HfK0NDjj/VQ6XzIlTuQB1nTUC6MzfiFQq+izg79i7zW78v8H24vDimMDMAMQ9o
-whpX+rA7cB6jKDirYYTkKEBG/OyTqZdBkDVtEmKTiRh1yl0KncW8ciT2uaVsZuB+
-L+ShY3J+idqULHL+mksxNrz1y1GHgBGDbljbdZbRtJrIms28I7xQ0W+t8w541s4y
-xNgrIh1s5T6vVezlttITvf974s3MtMYE3Dw3RpdH9XuJGwOTgpQySE2Jv0kJEohr
-FJz64f3v7sIuGrhqK9z0G6UoHGMptmgJsf51aQS528quqPrYoABb6ko/oDLHXAPm
-W23eQqwn5W/oNRHIRWebe+F3LbRskzghqRtJnzsfm3cy+hhvNS6Y7DoGquQFRCA3
-4gNuyrmNgTqPx3GuDsnTCnjS8cyjmj21FwH74Ow2P5Har/bnmdKVbr9inOe2cdzv
-dgAKfQWc/sq3a/ZroGJ8/SCNDk8SXs3t4Rb4AIxkGOSp6AtSU0dsPheZqercqIiG
-9NnX/oxg8JhkPGUxGSFHJqaYAXspBlqJrgioOiS3/9cQ5E4Zd5zEhQTcTIGPFYhH
-e6AvMbLCYU+MSsk3bS1Je+1H3Qrc+g7XwtzODt//5zs4K4wVKR9cR5MKa55fjFeT
-3rNSJ9mhtYzbhWW9WPQb
-=CxLw
+iEYEAREIAAYFAlMgf78ACgkQVWmRsqeSphOtqgCdFaJF9UXcCicFJRV+YU0IaYMQ
+sFMAn0eLhpmDq3rBOtySzRcNG98M7cLt
+=bZd7
 -----END PGP SIGNATURE-----
